# BrowserGym

./: .gitignore  Untitled  a.py  axtree.json  b.py  config.json  index.html  index.json  myst.search.json  myst.xref.json  objects.inv  reAct.explain  reAct.prompt  reAct.txt  setup.md  sitemap.xml  test_cases.py  test_miniwob.py
colab_ollama/: axtree.txt  b.py  batch_miniwob_batchsolve.py  batch_miniwob_report.json  butclickenv1.py  butclickenv2.py  buy_ticket.txt  cli_db_list.py  click_button_solver.py  export.sh  inject_js_playwright.py  pyproject.toml  redo_nogoal_report.json  redo_nogoal_with_action_grammar.py
colab_ollama/axtrees/: browsergym_miniwob_ascending-numbers.json  browsergym_miniwob_bisect-angle.json  browsergym_miniwob_book-flight-nodelay.json  browsergym_miniwob_book-flight.json  browsergym_miniwob_buy-ticket.json  browsergym_miniwob_choose-date-easy.json  browsergym_miniwob_choose-date-medium.json  browsergym_miniwob_choose-date-nodelay.json  browsergym_miniwob_choose-date.json  browsergym_miniwob_choose-list.json  browsergym_miniwob_circle-center.json  browsergym_miniwob_click-button-sequence.json  browsergym_miniwob_click-button.json  browsergym_miniwob_click-checkboxes-large.json  browsergym_miniwob_click-checkboxes-soft.json  browsergym_miniwob_click-checkboxes-transfer.json  browsergym_miniwob_click-checkboxes.json  browsergym_miniwob_click-collapsible-2-nodelay.json  browsergym_miniwob_click-collapsible-2.json  browsergym_miniwob_click-collapsible-nodelay.json  browsergym_miniwob_click-collapsible.json  browsergym_miniwob_click-color.json  (+103 more)
(+339 files in other folders)
