[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-browsergym"
version = "0.1.0"
description = "Run Ollama models on Colab and evaluate BrowserGym benchmarks with MySQL logging."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Doug Chang" }]
dependencies = [
  "requests>=2.31",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",

  "sqlalchemy>=2.0",
  "pymysql>=1.1",
  "pandas>=2.0",

  # BrowserGym / MiniWoB runtime (pin if you want reproducibility)
  "gymnasium>=0.29",
  "browsergym>=0.4.0",
  "browsergym-miniwob>=0.4.0",
  "playwright>=1.42",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "ipykernel>=6.29",
  "jupyter>=1.1",
]
viz = [
  "matplotlib>=3.8",
]
mysql-server-colab = [
  "mysql-connector-python>=9.0",
]

[project.scripts]
obg = "obg.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false